# paspale

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/: ablation.py  bar.py  dual_axis.py  kde.py  stacked.py
examples/example_data/: README.md  ablation.csv  bandwidth.csv  basic.csv  energy.csv  example.csv  missrate.csv  performance.csv
src/paspale/: __init__.py  base.py  cli.py  colors.py  config.py  paspale.py
src/paspale/plotters/: __init__.py  bar.py  dual_axis.py  kde.py  line.py  stacked.py
tests/: test_paspale.py
